# automotive_wire_codec

./: .gitignore  .image-lifecycle.yml  .mergify.yml  .pre-commit-config.yaml  .typos.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  MIGRATION.md  README.md  SECURITY.md  codecov.yml  commitlint.config.js  deny.toml  pyproject.toml  release-plz.toml  renovate.json  testspace.yml  ubproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  zizmor.yml
.github/workflows/: main.yml  pr-lint.yml  scorecard.yml
crates/automotive_wire_codec/: Cargo.toml
crates/automotive_wire_codec/src/: decode.rs  error.rs  lib.rs  read.rs  write.rs
crates/automotive_wire_format_safety_core/: Cargo.toml
crates/automotive_wire_format_safety_core/benches/: all.rs
crates/automotive_wire_format_safety_core/src/: lib.rs
docs/safety/: README.rst
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode_roundtrip.rs  sort_core_equivalence.rs  verifier_predicates.rs
src/: decode.rs  encode.rs  error.rs  lib.rs  read.rs  write.rs
supply-chain/: config.toml
tests/: roundtrip.rs
tools/docker/rust/: Dockerfile
tools/docker/uv_minimal/: Dockerfile
