[workspace]
members = [
    "crates/automotive_wire_codec",
]
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "LicenseRef-Proprietary"
authors = []
description = "Zero-copy, no_std, no-alloc binary codec traits for automotive diagnostic protocols"
documentation = ""

[workspace.dependencies]
proptest = "1.5"
