[package]
name = "automotive-wire-codec"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Zero-copy, no_std, no-alloc binary codec traits for automotive diagnostic protocols"
repository = "https://github.com/luminartech/automotive_wire_codec"
homepage = "https://github.com/luminartech/automotive_wire_codec"
keywords = ["no-std", "embedded", "automotive", "codec", "zero-copy"]
categories = ["no-std", "no-std::no-alloc", "embedded", "encoding", "parser-implementations"]
# Root is now the crate root, so keep repo tooling out of the published tarball.
include = [
    "src/**/*.rs",
    "tests/**/*.rs",
    "Cargo.toml",
    "README.md",
    "MIGRATION.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[dependencies]
embedded-io = { version = "0.7", default-features = false }

[dev-dependencies]
proptest = "1.5"

[lints.rust]
unsafe_code = "forbid"
