[package]
name = "fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
automotive-wire-codec = { path = "../crates/automotive_wire_codec" }
embedded-io = { version = "0.7", default-features = false }

[workspace]
members = ["."]

[[bin]]
name = "decode_roundtrip"
path = "fuzz_targets/decode_roundtrip.rs"
test = false
doc = false
bench = false
