[package]
name = "automotive-wire-codec"
version.workspace = true
edition.workspace = true
rust-version = "1.85"
license.workspace = true
authors.workspace = true
description = "Zero-copy, no_std, no-alloc binary codec traits for automotive diagnostic protocols"
documentation.workspace = true

[dependencies]
embedded-io = { version = "0.7", default-features = false }

[dev-dependencies]
proptest.workspace = true

[lints.rust]
unsafe_code = "forbid"
